# gitlab-cicd-release-pipeline

./: README.md  hatch_build.py  pyproject.toml
docs/: .gitlab-ci.yml.md  hatch_build.py.md  pyproject.toml.md
my-data-project/: code.py
