# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "my-data-project"
dynamic = ["version"]
description = "My data project wheel"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Team", email = "team@example.com" }
]
dependencies = [
    "commitizen>=3.28.0,<4"
]

# ---------------------------------------------------------------------------
# Hatch – version comes from our custom hook (hatch_build.py)
# ---------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]  
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["my-data-project"]

[tool.hatch.version]
# path = "my-data-project/__init__.py"
source = "code"                    # ← use "code" source, not "vcs" or path file
path   = "hatch_build.py"       # ← points to our file
expression = "get_version()"      # ← calls our function


# ---------------------------------------------------------------------------
# Commitizen – computes the NEXT semver tag on main
# ---------------------------------------------------------------------------
[tool.commitizen]
name                    = "cz_conventional_commits"
tag_format              = "$version"          # tags look like  1.2.3  (no leading v)
version                 = "0.4.1"
version_files           = ["my-data-project/__init__.py:__version__"]
update_changelog_on_bump = false
